# tais

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  tais-core-IMPL.md  tais-core-PRD.md  tais.db
assets/: agent_helpers.py
memory/skills/: tais_evolution.md  tais_feedback_collector.md  tais_skill_coach.md  tais_workflow.md  web_search.md
migrations/: 0001_init.sql
src/: config.rs  lib.rs  main.rs
src/agent/: mod.rs  proposer.rs  rater.rs
src/auth/: mod.rs
src/data/: mod.rs
src/evolution/: evaluator.rs
src/gene/: mod.rs
src/habit/: rules.rs  state.rs
src/llm/: mod.rs  openai.rs
src/mcp/: mod.rs
src/memory/: checkpoint.rs  hot.rs  mod.rs  shared.rs
src/orchestrator/: dag.rs  executor.rs  mod.rs  parser.rs
src/skills/: loader.rs
src/wechat/: mod.rs
tais-core/: IMPL.md  PRD.md  tais-source.rar
tais-core/memory/: tais_hot_memory.md
tais-core/memory/skills/: _index.md  calculator.md  news_fetch.md  tais_learning_analyst.md  tais_resource_pusher.md  tais_socratic_tutor.md  写了程序就要执行啊.md  查找“组织机构”链接，_如何查找，要分辨啊.md
tais-core/src/agent/: consumer.rs  deployer.rs  loop.rs
tais-core/src/api/: mod.rs
tais-core/src/chat/: mod.rs
tais-core/src/dashboard/: mod.rs
tais-core/src/evolution/: collector.rs  mod.rs  optimizer.rs
tais-core/src/habit/: mod.rs
tais-core/src/llm/: anthropic.rs  ollama.rs
tais-core/src/mcp/: protocol.rs  registry.rs
tais-core/src/memory/: user.rs
tais-core/src/orchestrator/: task.rs
tais-core/src/skills/: crystallizer.rs  implementations.rs  mod.rs
