[package]
name = "tais-core"
version = "0.1.0"
edition = "2024"
description = "TAIS (Teacher-AI-Student) Self-Evolving Teaching System Core Engine"

[lib]
doctest = false

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server + WebSocket
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client (for MCP, LLM API calls) — rustls, no system OpenSSL needed
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Graph / DAG for workflow
petgraph = "0.7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "uuid"] }

# ID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait
async-trait = "0.1"

# Statistic for A/B testing
statrs = "0.17"

# Hashing for WeChat signature
sha1 = "0.10"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Config
toml = "0.8"

[dev-dependencies]
# Test utilities
tokio-test = "0.4"

[[bin]]
name = "tais-server"
path = "src/main.rs"
